--- a/qna_backend/requirements.txt
+++ b/qna_backend/requirements.txt
@@ -15,3 +15,6 @@ PyYAML==6.0.2
 sqlparse==0.5.3
 uritemplate==4.1.1
 django-cors-headers==4.7.0
+djangorestframework-simplejwt==5.3.1
+langchain-core==0.3.15
+langchain-google-genai==2.0.6
