CheckPoint - cg0b3de6b9

--- a/qna_backend/.env.example
+++ b/qna_backend/.env.example
@@ -1,24 +1,16 @@
-# Django settings
-DJANGO_SECRET_KEY=CHANGE_ME_IN_PRODUCTION
-DJANGO_DEBUG=true
+# Copy this file to .env and fill in the values.
+# The backend will load this file automatically when running via manage.py, ASGI, or WSGI.
 
-# CORS
-CORS_ALLOW_ALL=true
+# Gemini API key (required for real AI responses)
+GEMINI_API_KEY=your_gemini_api_key_here
 
-# AI configuration
-# Set USE_MOCK_AI=true to use a mocked response (useful in development without keys)
-USE_MOCK_AI=true
-
-# Gemini API key for real responses (from Google AI Studio)
-GEMINI_API_KEY=
-
-# Optional: pick a Gemini model
+# Optional: choose model variant (default: gemini-1.5-flash)
 GEMINI_MODEL=gemini-1.5-flash
+
+# Set to "true" to force mocked AI responses (useful for local dev without a key)
+USE_MOCK_AI=false
 
 # Optional: LangChain tracing settings
 LANGCHAIN_TRACING_V2=false
 LANGCHAIN_API_KEY=
 LANGCHAIN_PROJECT=
-
-# Optional: MCP server URL if using a gateway (not required for basic Gemini chat)
-MCP_SERVER_URL=
