--- a/qna_backend/requirements.txt
+++ b/qna_backend/requirements.txt
@@ -18,3 +18,4 @@ django-cors-headers==4.7.0
 djangorestframework-simplejwt==5.3.1
 langchain-core==0.3.15
 langchain-google-genai==2.0.6
+python-dotenv==1.0.1
